@@ -5,6 +5,9 @@ update-manager (1:0.121) karmic; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - when guessing missing meta-packages stop after
       the first one was found
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - move the kubuntu-kde4-desktop key dependency transition
+      detection to the from_hardy quirks handler (LP: #368459)
       
 
  --
